Refs #143927 - Fix layout issues.

--- a/src/less/public.less
+++ b/src/less/public.less
@@ -1,3 +1,22 @@
+body.searchlib-page {
+  div#page-document {
+    top: 0px;
+
+    div.searchapp {
+      div.col-left {
+        padding: 0px 1.5em 0px 1.5em;
+        margin-top: 0px;
+      }
+    }
+  }
+
+  div.footer-wrapper {
+    margin-top: 5em;
+  }
+}
+
+// ----------------------------------------------------------------------------
+
 .searchapp-wise {
   background-color: #fff !important;
   font-family: 'RobotoL' !important;
